# Inline-LaTeX

./: .copier-answers.hexdoc-hexcasting.yml  .gitignore  CHANGELOG.md  README.md  build.gradle  gradle.properties  pyproject.toml  settings.gradle
.github/workflows/: build_docs.yml
common/: build.gradle
common/src/main/java/io/github/techtastic/inlinelatex/: InlineLaTeX.java
common/src/main/java/io/github/techtastic/patchematical/: Patchematical.java
common/src/main/resources/: patchematical.mixins.json
doc/: README.md
doc/src/hexdoc_inline_latex/: __version__.py  _hooks.py
fabric/: build.gradle
fabric/src/main/java/io/github/techtastic/inlinelatex/fabric/: InlineLaTeXFabric.java
fabric/src/main/java/io/github/techtastic/inlinelatex/fabric/client/: InlineLaTeXFabricClient.java
fabric/src/main/java/io/github/techtastic/patchematical/fabric/: PatchematicalFabric.java
fabric/src/main/java/io/github/techtastic/patchematical/fabric/client/: PatchematicalFabricClient.java
fabric/src/main/resources/: fabric.mod.json
forge/: build.gradle
forge/src/main/java/io/github/techtastic/inlinelatex/forge/: InlineLaTeXForge.java
forge/src/main/java/io/github/techtastic/patchematical/forge/: PatchematicalForge.java
forge/src/main/resources/: pack.mcmeta
