[build-system]
requires = [
    "hatchling",
    "hatch-gradle-version>=0.9.8",
]
build-backend = "hatchling.build"

# project metadata

[project]
name = "hexdoc-inline-latex"
description = "Adding LaTeX support to Inline!"
readme = "doc/README.md"
authors = [
    { name="TechTastic" },
]
keywords = ["hexdoc"]
requires-python = ">=3.12"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://techtastic.github.io/Inline-LaTeX"
Source = "https://github.com/TechTastic/Inline-LaTeX"

# project version

[tool.hatch.version]
scheme = "gradle"
source = "gradle-properties"
py-path = "doc/src/hexdoc_inline_latex/__version__.py"
key = "mod_version"

# Python dependencies

# required
[tool.hatch.metadata.hooks.gradle-properties]
dependencies = [
    "hexdoc>=1!0.1.0a36",
]

# dev-only
[dependency-groups]
dev = [
    "ruff",
]

# directory inclusion

[tool.hatch.build]
only-include = [
    "doc/src/hexdoc_inline_latex",
    "gradle.properties",
]
artifacts = [
    "/doc/src/hexdoc_inline_latex/_export/generated",
    "/doc/src/hexdoc_inline_latex/__gradle_version__.py",
]

[tool.hatch.build.targets.wheel]
sources = ["doc/src"]

# hexdoc entry points

[project.entry-points.hexdoc]
inlinelatex = "hexdoc_inline_latex._hooks:InlinelatexPlugin"

# linting

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"

include = ["doc/src"]
extraPaths = ["doc/src"]

typeCheckingMode = "standard"

strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportConstantRedefinition = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "error"

reportDeprecated = "warning"
reportDuplicateImport = "warning"
reportMatchNotExhaustive = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportMissingTypeStubs = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUntypedBaseClass = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedNamedTuple = "warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
